--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,13 +2,26 @@ body {
   margin:0 10px;
 }
 .App {
-  font-family: Arial, Helvetica, sans-serif;
-  max-width:600px;
+  font-family: 'Oswald', sans-serif;
+  max-width:800px;
+  width:600px;
   margin: auto;
+  padding: 20px;
+  background-color: #F0F1F3;
+  float: left;
 }
+
+#entries{
+  font-family: 'Open Sans', sans-serif;
+}
+
 #userInput {
+  float: left;
+  padding-top: 20px;
+  font-family: 'Open Sans', sans-serif;
   display: flex;
   flex-direction: column;
+  width: 50%;
 }
 #userInput div{
   width: 100%;
@@ -21,12 +34,13 @@ body {
   font-size: 2rem;
   border-radius: 5px;
   color: #333;
-  background-color:rgba(135, 206, 235, 0.3);
+  background-color:#dbdddf;
 }
 #firstLastName {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
+
 #userInput label{
   display: block;
 }
@@ -37,6 +51,7 @@ body {
   justify-content: center;
 }
 .submitBtn {
+  margin-top: 0px;
   margin: 20px;
   padding: 10px;
   width: 50%;
